--- a/css/loginStyle.css
+++ b/css/loginStyle.css
@@ -12,9 +12,14 @@ form {
 	font-weight: 500;
 	font-size: 24px;
 	line-height: 34px;
-
 	text-align: center;
 }
+@media (orientation: portrait) and (max-width: 480px), (orientation: landscape) and (max-width: 720px) {
+	.login h2 {
+	  margin: 0px 0px 30px 0px;
+	}
+}
+
 .boxForm {
 	display: block;
 	text-align: center;
